--- a/splash.html
+++ b/splash.html
@@ -27,6 +27,6 @@
   </head>
   <body>
     <h1>New Flame? Start Here.</h1>
-    <h2>https://wiki.mozilla.org/FirefoxOS/Flame</h2>
+    <h2>bit.ly/flame-on</h2>
   </body>
 </html>
