--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <h1>Get the most out of your Flame</h1>
     <article>
       <h2>Build Something Great</h2>
-      <a href="http://webmaker-app.mofodev.net/">Try Mobile AppMaker!</a>
+      <a href="http://webmaker-app.mofodev.net/">Try WebMaker Mobile!</a>
       <a href="https://developer.mozilla.org/en-US/Firefox_OS/Developer_phone_guide/Flame">Developer resources</a>
       <h2>Flash Your Device</h2>
       <p>Your new Flame is likely running Firefox OS 1.3. If you'd like to update to a newer version, visit the Flashing station on Floor 6.</p>
