--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         margin: 0;
         font-family: "Fira Sans";
         line-height: 1.4em;
+        font-size: 14px;
       }
       h1, h2 {
         font-weight: 800;
