font size tweak

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         margin: 0;
         font-family: "Fira Sans";
         line-height: 1.4em;
-        font-size: 14px;
+        font-size: 16px;
       }
       h1, h2 {
         font-weight: 800;
@@ -46,10 +46,10 @@
         background: #0095DD;
       }
       h2 {
-        margin: 1em 0 1em;
+        margin: 2em 0 1em;
       }
-      * + h2 {
-        margin-top: 2em;
+      h2:first-child {
+        margin-top: 1em;
       }
     </style>
   </head>
