font size tweak

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <link href="http://code.cdn.mozilla.net/fonts/fira.css" rel="stylesheet">
     <style>
+     * {
+       margin: 0;
+       padding: 0;
+     }
       body, html {
         height: 100%;
         margin: 0;
@@ -65,6 +69,7 @@
       <a href="https://support.mozilla.org/en-US/kb/get-started-firefox-os">Get Started</a>
       <a href="https://support.mozilla.org/en-US/products/firefox-os">Support</a>
       <a href="http://www.everbuying.com/product549652.html">Buy A Flame</a>
+      <h2>Thanks!</h2>
     </article>
   </body>
 </html>
