self service flashing

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         text-align: center;
         padding: 2em 1em 1em;
         margin: 0;
-        font-size: 8vmin;
         text-shadow: 0 0 8px #fff;
         line-height: 1.4em;
       }
@@ -66,6 +65,8 @@
       <a href="https://developer.mozilla.org/en-US/Firefox_OS/Developer_phone_guide/Flame">Developer resources</a>
       <h2>Flash Your Device</h2>
       <p>Your new Flame is likely running Firefox OS 1.3. If you'd like to update to a newer version, visit the Flashing station on Floor 6.</p>
+      <p>If you'd like to update your phone on your own:</p>
+      <a href="https://developer.mozilla.org/en-US/Firefox_OS/Developer_phone_guide/Flame#Updating_your_Flame%27s_software">Update your Flame</a>
       <h2>Welcome to Firefox OS</h2>
       <a href="https://support.mozilla.org/en-US/kb/get-started-firefox-os">Get Started</a>
       <a href="https://support.mozilla.org/en-US/products/firefox-os">Support</a>
