--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
         font-weight: 800;
         font-style: italic;
       }
-      h1 {
+      header {
         background-image: linear-gradient(to bottom, rgba(255,255,255,.3), rgba(255,255,255,.3)), url('img/tail.png');
         background-size: 100% auto;
         background-repeat: no-repeat;
         background-position: center;
         text-align: center;
-        padding: 2em 1em 1em;
+        padding: 4em 1em 1em;
         margin: 0;
         text-shadow: 0 0 8px #fff;
+      }
+      h1 {
         line-height: 1.4em;
       }
       article {
@@ -58,7 +60,9 @@
     </style>
   </head>
   <body>
-    <h1>Get the most out of your Flame</h1>
+    <header>
+      <h1>Get the most out of your Flame</h1>
+    </header>
     <article>
       <h2>Build Something Great</h2>
       <a href="http://webmaker-app.mofodev.net/">Try WebMaker Mobile!</a>
