--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
      }
       body, html {
         height: 100%;
-        margin: 0;
         font-family: "Fira Sans";
         line-height: 1.4em;
         font-size: 16px;
@@ -22,16 +21,17 @@
       }
       header {
         background-image: linear-gradient(to bottom, rgba(255,255,255,.3), rgba(255,255,255,.3)), url('img/tail.png');
-        background-size: 100% auto;
+        background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
         text-align: center;
-        padding: 4em 1em 1em;
+        padding: 4em 1em 2em;
         margin: 0;
         text-shadow: 0 0 8px #fff;
       }
       h1 {
         line-height: 1.4em;
+        margin: .1em 0;
       }
       article {
         padding: 0 1em;
