--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
       h2:first-child {
         margin-top: 1em;
       }
+      footer {
+        padding: 3rem 1rem;
+        background: #00539F;
+        color: #fff;
+        text-align: center;
+        font-style: italic;
+        text-transform: uppercase;
+        font-size: 2em;
+        font-weight: 800;
+      }
     </style>
   </head>
   <body>
@@ -75,7 +85,7 @@
       <a href="https://support.mozilla.org/en-US/kb/get-started-firefox-os">Get Started</a>
       <a href="https://support.mozilla.org/en-US/products/firefox-os">Support</a>
       <a href="http://www.everbuying.com/product549652.html">Buy A Flame</a>
-      <h2>Thanks!</h2>
     </article>
+    <footer>Thank You!</footer>
   </body>
 </html>
