--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
       <h1>Get the most out of your Flame</h1>
     </header>
     <article>
+      <h2>Welcome to Firefox OS</h2>
+      <a href="https://wiki.mozilla.org/MozFest/Phone">Get Involved</a>
+      <a href="https://support.mozilla.org/en-US/kb/get-started-firefox-os">Get Started</a>
+      <a href="https://support.mozilla.org/en-US/products/firefox-os">Support</a>
       <h2>Build Something Great</h2>
       <a href="http://webmaker-app.mofodev.net/">Try WebMaker Mobile!</a>
       <a href="https://developer.mozilla.org/en-US/Firefox_OS/Developer_phone_guide/Flame">Developer resources</a>
@@ -81,9 +85,7 @@
       <p>Your new Flame is likely running Firefox OS 1.3. If you'd like to update to a newer version, visit the Flashing station on Floor 6.</p>
       <p>If you'd like to update your phone on your own:</p>
       <a href="https://developer.mozilla.org/en-US/Firefox_OS/Developer_phone_guide/Flame#Updating_your_Flame%27s_software">Update your Flame</a>
-      <h2>Welcome to Firefox OS</h2>
-      <a href="https://support.mozilla.org/en-US/kb/get-started-firefox-os">Get Started</a>
-      <a href="https://support.mozilla.org/en-US/products/firefox-os">Support</a>
+      <h2>Don't Have One?</h2>
       <a href="http://www.everbuying.com/product549652.html">Buy A Flame</a>
     </article>
     <footer>Thank You!</footer>
