--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Flame On</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
-    <link href="http://code.cdn.mozilla.net/fonts/fira.css" rel="stylesheet">
+    <link href="//code.cdn.mozilla.net/fonts/fira.css" rel="stylesheet">
     <style>
      * {
        margin: 0;
